RESOLVED FIXED228021
[GTK][WPE] PSON: accessibility doesn't work after a cross site navigation
https://bugs.webkit.org/show_bug.cgi?id=228021
Summary [GTK][WPE] PSON: accessibility doesn't work after a cross site navigation
Carlos Garcia Campos
Reported 2021-07-16 03:59:12 PDT
The provisional page is not handling the BindAccessibilityTree message and we never embed the new web process plug into the UI process socket.
Attachments
Patch (4.70 KB, patch)
2021-07-16 04:03 PDT, Carlos Garcia Campos
aperez: review+
Carlos Garcia Campos
Comment 1 2021-07-16 04:03:03 PDT
Carlos Garcia Campos
Comment 2 2021-07-16 04:16:25 PDT
Michael Catanzaro
Comment 3 2021-07-16 06:48:36 PDT
Nice!
Note You need to log in before you can comment on or make changes to this bug.